<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/amita"
        android:gravity="center"
        android:text="@string/real_time_health_monitoring_btp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/PatientName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:fontFamily="@font/amita"
            android:gravity="center_vertical"
            android:hint="@string/patient_name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:importantForAutofill="no" />



        <EditText
            android:id="@+id/dob"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:fontFamily="@font/amita"
            android:gravity="center_vertical"
            android:hint="DOB"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:autofillHints="" />

        <EditText
            android:id="@+id/email"

            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:fontFamily="@font/amita"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/phone"
            android:layout_width="250dp"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:fontFamily="@font/amita"
            android:gravity="center_vertical"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/Password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:fontFamily="@font/amita"
            android:gravity="center_vertical"
            android:hint="Password"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:text="@string/sign_up" />



    </LinearLayout>



</LinearLayout>